Diverse bilder, slik at alle forhåpentligvis har den samme mappestruktur

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -3,10 +3,5 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title> Arkiv</title>
+    <title> Arkiv - Naborevyen</title>
   </head>
-
-  <body>
-
-
-  </body>
