la til link til hvert html dokument for undergrupper

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -6,6 +6,17 @@
     <title>Oversikt Undergrupper</title>
   </head>
   <body>
-    
+    <h1>Oversikt over undergrupper i Naborevyen</h1>
+    <h2>Revystyret</h2>
+    <a href="Styret.html">Revystyret</a>
+    <a href="Bygg.html">Bygg</a>
+    <a href="Dans.html">Dans</a>
+    <a href="Kostyme_og_rekvisitter.html">Kostyme- og rekvisitt</a>
+    <a href="Musikk_og_band.html">Musikk- og band</a>
+    <a href="PR_og_design.html">PR- og design</a>
+    <a href="Skribent.html">Skriblentene</a>
+    <a href="Teknikk.html">Teknikere</a>
+    <a href="Velferd.html">Velferdsansvarlige</a>
+    <a href="Økonomi.html">Økonomi</a>
   </body>
 </html>
