startet med images

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Oversikt over undergrupper i Naborevyen</h1>
     <h2>Revystyret</h2>
+    <a href="Images/"><img src="flower.jpg"
+       width="82" height="86" title="White flower" alt="Flower"></a>
     <a href="Styret.html">Revystyret</a>
     <a href="Bygg.html">Bygg</a>
     <a href="Dans.html">Dans</a>
