Arkiv-leking med CSS-definering og bruk av CSS Grid og CSS FlexBox

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -5,11 +5,16 @@
     <link rel="stylesheet" href="style.css">
     <title> Arkiv - Naborevyen</title>
   </head>
-  <body>
-    <iframe id="video_1" class="arkiv_video" width="560" height="315" src="https://youtu.be/Od2TcYjr3A8?list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe id="video_2" class="arkiv_video" width="560" height="315" src="https://youtu.be/BBEUTNFcu3w?list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe id="video_3" class="arkiv_video" width="560" height="315" src="https://youtu.be/DjxH0PXsM0k"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <body class="arkiv_body">
+    <div class="arkiv_video_omrade">
+      <iframe id="video_1" class="arkiv_video" src="https://youtu.be/Od2TcYjr3A8?list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="video_2" class="arkiv_video" src="https://youtu.be/BBEUTNFcu3w?list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="video_3" class="arkiv_video" src="https://youtu.be/DjxH0PXsM0k"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="abc">
+
+    </div>
   </body>
