Ferdig for dagen?

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -4,4 +4,31 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title> Arkiv - Naborevyen</title>
+    <style>
+    body{
+        margin-left: 10vw;
+        margin-right: 10vw;
+    }
+img {width: 15vw;
+    border: solid;
+    border-color: Black
+    offset}
+    </style>
   </head>
+
+  <body>
+<div class="Arkiv_Bilder_Rad_1">
+    <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="1">
+    <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="2">
+    <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="3">
+    <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="4">
+    <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="5">
+</div>
+
+
+
+
+
+
+    <img src="https://drive.google.com/uc?id=1pFdQzVJvybd7ZlpxzZIt-d7vKMeIyTwE" alt="Test">
+  </body>
