Ripp glemte å stage

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -11,8 +11,7 @@
     }
 img {width: 15vw;
     border: solid;
-    border-color: Black
-    offset}
+    border-color: Black;}
     </style>
   </head>
 
