--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -4,43 +4,67 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title> Arkiv - Naborevyen</title>
-   
-    <style>
-    body{
-        margin-left: 10vw;
-        margin-right: 10vw;
-    }
-img {width: 15vw;
-    border: solid;
-    border-color: Black;}
-    </style>
+
   </head>
 
-  <body class="arkiv_body">
-    <div class="arkiv_video_omrade">
-      <iframe id="video_1" class="arkiv_video" src="https://youtu.be/Od2TcYjr3A8?list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe id="video_2" class="arkiv_video" src="https://youtu.be/BBEUTNFcu3w?list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe id="video_3" class="arkiv_video" src="https://youtu.be/DjxH0PXsM0k"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <div class="abc">
-
-    </div>
-  
-<div class="Arkiv_Bilder_Rad_1">
-    <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="1">
-    <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="2">
-    <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="3">
-    <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="4">
-    <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="5">
-</div>
+  <body class="entire_page">
 
 
+      <div class="header_element">
+        <img id="logo_image" src="Bilder/Logoer/Naborevyen_logo.png" alt=" ">
+      </div>
+
+      <div class="body_element" id="arkiv_body">
 
 
+        <div class="arkiv_video_omrade">
+
+          <iframe id="video_1" class="arkiv_video" src="https://youtu.be/Od2TcYjr3A8?list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="video_2" class="arkiv_video" src="https://youtu.be/BBEUTNFcu3w?list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="video_3" class="arkiv_video" src="https://youtu.be/DjxH0PXsM0k"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="abc">
+
+        </div>
+
+      <div class="Arkiv_Bilder">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="Bilde_1">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="2">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="3">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="4">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="5">
+      </div>
+
+            <div class="Arkiv_Bilder">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="6">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="7">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="8">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="9">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="10">
+            </div>
+            <div class="Arkiv_Bilder">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="11">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="12">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="13">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="14">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="15">
+            </div>
+            <div class="Arkiv_Bilder">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="16">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="17">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="18">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="19">
+              <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="20">
+            </div>
+
+      </div>
+
+      <div class="footer_element">
+
+      </div>
 
 
-    <img src="https://drive.google.com/uc?id=1pFdQzVJvybd7ZlpxzZIt-d7vKMeIyTwE" alt="Test">
   </body>
