--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -15,10 +15,18 @@
       </div>
 
       <div class="body_element" id="arkiv_body">
+  <div class="Arkiv_Bilder">
+        <h2 class="arkiv_title">Revy 2015</h2>
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="16">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="17">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="18">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="19">
+        <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="20">
 
+      </div>
 
         <div class="arkiv_video_omrade">
-
+<h1 class="arkiv_title_3">Filmer av revyene</h1>
           <iframe id="video_1" class="arkiv_video" src="https://youtu.be/Od2TcYjr3A8?list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe id="video_2" class="arkiv_video" src="https://youtu.be/BBEUTNFcu3w?list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
@@ -29,8 +37,9 @@
         <div class="abc">
 
         </div>
+    <div class="Arkiv_Bilder">
+<h2 class="arkiv_title">Arbeid Pågår</h2>
 
-      <div class="Arkiv_Bilder">
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="Bilde_1">
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="2">
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="3">
@@ -39,6 +48,7 @@
       </div>
 
             <div class="Arkiv_Bilder">
+              <h2 class="arkiv_title">Revy øvelser 2016</h2>
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="6">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="7">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="8">
@@ -46,19 +56,14 @@
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="10">
             </div>
             <div class="Arkiv_Bilder">
+              <h2 class="arkiv_title">Revy 2014</h2>
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="11">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="12">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="13">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="14">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="15">
             </div>
-            <div class="Arkiv_Bilder">
-              <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="16">
-              <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="17">
-              <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="18">
-              <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="19">
-              <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="20">
-            </div>
+
 
       </div>
 
