Initial Header-branch commit. Lagt over mye fra HTML til JS, og noe CSS til JS

--- a/P3/Skall.html
+++ b/P3/Skall.html
@@ -5,15 +5,7 @@
     <title>Skall</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="entire_page">
-    <div class="header_element">
-      <img id="logo_image" src="Bilder/Logoer/Naborevyen_logo.png" alt=" ">
-    </div>
-    <div class="body_element">
-
-    </div>
-    <div class="footer_element">
-
-    </div>
+  <body>
+    <script src="Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
