--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -10,6 +10,16 @@
       <img id="logo_image" src="Bilder/Logoer/Naborevyen_logo.png" alt=" ">
     </div>
     <div class="body_element">
+      <img class="banner" src="Bilder/Bannere/IMG_2232.JPG" alt="banner">
+      <div id="hovedside_boks">
+        <div class="nyheter_boks">
+
+
+        </div>
+
+
+      </div>
+
 
     </div>
     <div class="footer_element">
