--- a/P3/Skall.html
+++ b/P3/Skall.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" class="html_shell">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Skall</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="center_element">
+
+    </div>
     <script src="Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
