div jossing på hovedside og generell struktur. La inn js i arkivet

--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -9,11 +9,12 @@
     <div class="header_element">
       <img id="logo_image" src="Bilder/Logoer/Naborevyen_logo.png" alt=" ">
     </div>
-    <div class="body_element">
+    <div class="center_element">
       <img class="banner" src="Bilder/Bannere/IMG_2232.JPG" alt="banner">
       <div id="hovedside_boks">
-        <div class="nyheter_boks">
 
+        <div class="nyheter_boks">
+<p>Nyheter:</p>
 
         </div>
 
