--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -8,13 +8,10 @@
   </head>
 
   <body class="entire_page">
+      <script src="Website_shell.js" type="text/javascript">
+      </script>
 
-
-      <div class="header_element">
-        <img id="logo_image" src="Bilder/Logoer/Naborevyen_logo.png" alt=" ">
-      </div>
-
-      <div class="body_element" id="arkiv_body">
+      <div class="center_element" id="arkiv_body">
   <div class="Arkiv_Bilder">
         <h2 class="arkiv_title">Revy 2015</h2>
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="16">
@@ -64,17 +61,5 @@
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="14">
               <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="15">
             </div>
-
-
-
-      </div>
-
-
-      <div class="footer_element">
-
-      </div>
-
-
-
-
+          </div>
   </body>
