--- a/P3/Skall.html
+++ b/P3/Skall.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="center_element">
+    <div class="center_element">
 
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
