--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr" class="html_shell">
   <head>
     <meta charset="utf-8">
-    <title>Skall</title>
+    <title>Hovedside-Naborevyen</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="entire_page">
-    <div class="header_element">
-      <img id="logo_image" src="Bilder/Logoer/Naborevyen_logo.png" alt=" ">
-    </div>
+
+
     <div class="center_element">
+
       <img class="banner" src="Bilder/Bannere/IMG_2232.JPG" alt="banner">
       <div id="hovedside_boks">
 
@@ -18,13 +18,21 @@
 
         </div>
 
+<div class="tekst_boks">
+<h2>Tilfeldig artikkel</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="tekst_boks" id="festet">
+<h2>Festet artikkel</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
 
       </div>
 
 
     </div>
-    <div class="footer_element">
 
-    </div>
+        <script src="Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
