--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -8,44 +8,44 @@
   <body>
     <h1>Oversikt over undergrupper i Naborevyen</h1>
 
-    <a href="Styret.html"><img src="Bilder/Oversiktsbilder/PR_logo.png"
-       style="width:80px; height:50px" title="PR logo" alt="PR logoen"></a>
+    <a href="Styret.html"><img class= "image" src="../Bilder/Oversiktsbilder/PR_logo.png"
+       title="PR logo" alt="PR logoen"></a>
     <a href="Styret.html">Revystyret</a>
 
-    <a href="Bygg.html"><img src="Bilder/Oversiktsbilder/Bygg_logo.png"
-       style="width:80px; height:50px" title="Bygg logo" alt="Bygg logoen"></a>
+    <a href="Bygg.html"><img class= "image" src="../Bilder/Oversiktsbilder/Bygg_logo.png"
+       title="Bygg logo" alt="Bygg logoen"></a>
     <a href="Bygg.html">Bygg</a>
 
-    <a href="Dans.html"><img src="Bilder/Oversiktsbilder/Dans_logo.png"
-       style="width:80px; height:50px" title="Dans logo" alt="Dans logoen"></a>
+    <a href="Dans.html"><img class= "image" src="../Bilder/Oversiktsbilder/Dans_logo.jpg"
+       title="Dans logo" alt="Dans logoen"></a>
     <a href="Dans.html">Dans</a>
 
-    <a href="Kostyme_og_rekvisitter.html"><img src="Bilder/Oversiktsbilder/Kostyme_og_rekvisitter_logo.png"
-       style="width:80px; height:50px" title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"></a>
+    <a href="Kostyme_og_rekvisitter.html"><img class= "image" src="../Bilder/Oversiktsbilder/Kostyme_og_rekvisitter_logo.png"
+       title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"></a>
     <a href="Kostyme_og_rekvisitter.html">Kostyme- og rekvisitt</a>
 
-    <a href="Musikk_og_band.html"><img src="Bilder/Oversiktsbilder/Musikk_og_band_logo.png"
-       style="width:80px; height:50px" title="Musikk og band logo" alt="Musikk og band logoen"></a>
+    <a href="Musikk_og_band.html"><img class= "image" src="../Bilder/Oversiktsbilder/Musikk_og_band_logo.png"
+       title="Musikk og band logo" alt="Musikk og band logoen"></a>
     <a href="Musikk_og_band.html">Musikk- og band</a>
 
-    <a href="PR_og_design.html"><img src="Bilder/Oversiktsbilder/PR_logo.png"
-       style="width:80px; height:50px" title="PR logo" alt="PR logoen"></a>
+    <a href="PR_og_design.html"><img class= "image" src="../Bilder/Oversiktsbilder/PR_logo.png"
+       title="PR logo" alt="PR logoen"></a>
     <a href="PR_og_design.html">PR- og design</a>
 
-    <a href="Skribent.html"><img src="Bilder/Oversiktsbilder/Skriblent_logo.png"
-       style="width:80px; height:50px" title="Skriblent logo" alt="Skriblent logoen"></a>
+    <a href="Skribent.html"><img class= "image" src="../Bilder/Oversiktsbilder/Skriblent_logo.png"
+       title="Skriblent logo" alt="Skriblent logoen"></a>
     <a href="Skribent.html">Skriblentene</a>
 
-    <a href="Teknikk.html"><img src="Bilder/Oversiktsbilder/Teknikk_logo.png"
-       style="width:80px; height:50px" title="Teknikk logo" alt="Teknikk logoen"></a>
+    <a href="Teknikk.html"><img class= "image" src="../Bilder/Oversiktsbilder/Teknikk_logo.png"
+       title="Teknikk logo" alt="Teknikk logoen"></a>
     <a href="Teknikk.html">Teknikere</a>
 
-    <a href="Velferd.html"><img src="Bilder/Oversiktsbilder/Velferd_logo.png"
-       style="width:80px; height:50px" title="Velferd logo" alt="Velferd logoen"></a>
+    <a href="Velferd.html"><img class= "image" src="../Bilder/Oversiktsbilder/Velferd_logo.png"
+       title="Velferd logo" alt="Velferd logoen"></a>
     <a href="Velferd.html">Velferdsansvarlige</a>
 
-    <a href="Økonomi.html"><img src="Bilder/Oversiktsbilder/Økonomi_logo.png"
-       style="width:80px; height:50px" title="Økonomi logo" alt="Økonomi logoen"></a>
+    <a href="Økonomi.html"><img class= "image" src="../Bilder/Oversiktsbilder/Økonomi_logo.png"
+       title="Økonomi logo" alt="Økonomi logoen"></a>
     <a href="Økonomi.html">Økonomi</a>
 
   </body>
