Diverse jobb med arkivet både i css og js

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -38,11 +38,11 @@
       </div>
       <div class="Arkiv_Bilder">
         <h2 class="arkiv_title">Revy øvelser 2016</h2>
-        <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="6">
-        <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="7">
-        <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="8">
-        <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="9">
-        <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="10">
+        <img class="hoverable"  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="6">
+        <img class="hoverable" src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="7">
+        <img class="hoverable" src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="8">
+        <img class="hoverable" src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="9">
+        <img class="hoverable" src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="10">
       </div>
       <div class="Arkiv_Bilder">
         <h2 class="arkiv_title">Revy 2014</h2>
@@ -54,5 +54,6 @@
       </div>
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
+    <script src="Arkiv.js" type="text/javascript"> </script>
   </body>
 </html>
