--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css">
     <title> Arkiv - Naborevyen</title>
   </head>
-  <body>
+  <body onpageshow="load()">
     <div class="center_element" id="arkiv_body">
-      <div class="Arkiv_Bilder">
-        <h2 class="arkiv_title">Revy 2015</h2>
+      <div class="Arkiv_Bilder" id="Revy???">
+        <h2 class="arkiv_title" >Revy ??? </h2>
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1801.JPG" alt="Arkiv" id="16">
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1870.JPG" alt="Arkiv" id="17">
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1876.JPG" alt="Arkiv" id="18">
@@ -55,5 +55,7 @@
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
     <script src="Arkiv.js" type="text/javascript"> </script>
+    <script type="text/javascript" src="./Bilder/Arkiv_Bilder/TextOutput.txt"></script>
+
   </body>
 </html>
