--- a/P3/Undergrupper/Bygg.html
+++ b/P3/Undergrupper/Bygg.html
@@ -3,48 +3,51 @@
   <head>
     <meta charset="utf-8">
     <title>Byggruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Byggruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Byggruppen</h1>
+          <p>
+            Fra skrivegruppa slipper manuset til scenen er rigget har byggruppa total
+            kreativ frihet over det meste som fysisk skal stå på scenen, og revyens
+            fysiske utseende er i vår nåde. Noen ganger bygger vi det som forventes,
+            andre ganger oppdager regissøren at hun må innlemme en 5m*2m stor buss i
+            oppsetningen tre dager før premieren. Byggruppa skaper uansett stor
+            spenning for alle involverte parter!
+          </p>
+          <p>
+            Byggruppa bruker det meste av tiden på byggekjelleren på Moholt hvor vi
+            snekrer, limer, maler, driller og hamrer. På byggekjelleren er raske
+            løsninger den eneste aksepterte valuta, og med den metaforen på plass
+            kan man trygt si at vi vasser i penger. Manus trenger en søppelhaug?
+            Lim sammen rekvisitter fra tidligere år, surr hønsenetting rundt og du har
+            en søppelhaug! Halvparten av alle rekvisitter bygges i papp? Stikk innom
+            IKEA, lei en varebil, ta så mye papp du vil fra IKEAs ulåste
+            pappcontainere, forlat åstedet ved hjelp av tidligere nevnte varebil og du
+            har all pappen du trenger!
+          </p>
+          <p>
+            Uansett bakgrunn er Byggruppa et godt innslag i en aktiv studenthverdag.
+            Praktisk og kreativt sløydarbeid er noe man fort innser at er en glemt
+            glede fra grunnskolen, og avspenningsverdien av slike aktiviteter kan ikke
+            undervurderes. Dessuten er det få andre studentaktiviteter kan skilte med
+            at budsjettet er fullstendig avhengig av jevnlig tyveri fra et
+            internasjonalt storselskap. Krav til ferdigheter og tidligere erfaringer
+            er ikke-eksisterende og byggruppa ønsker alle velkommen. <br><br>
+            Det bygges!
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      Fra skrivegruppa slipper manuset til scenen er rigget har byggruppa total
-      kreativ frihet over det meste som fysisk skal stå på scenen, og revyens
-      fysiske utseende er i vår nåde. Noen ganger bygger vi det som forventes,
-      andre ganger oppdager regissøren at hun må innlemme en 5m*2m stor buss i
-      oppsetningen tre dager før premieren. Byggruppa skaper uansett stor
-      spenning for alle involverte parter!
-    </p>
-    <div class="margin_heading">
-      <h2>Arbeidsoppgaver:</h2>
-    </div>
-    <p>
-      Byggruppa bruker det meste av tiden på byggekjelleren på Moholt hvor vi
-      snekrer, limer, maler, driller og hamrer. På byggekjelleren er raske
-      løsninger den eneste aksepterte valuta, og med den metaforen på plass
-      kan man trygt si at vi vasser i penger. Manus trenger en søppelhaug?
-      Lim sammen rekvisitter fra tidligere år, surr hønsenetting rundt og du har
-      en søppelhaug! Halvparten av alle rekvisitter bygges i papp? Stikk innom
-      IKEA, lei en varebil, ta så mye papp du vil fra IKEAs ulåste
-      pappcontainere, forlat åstedet ved hjelp av tidligere nevnte varebil og du
-      har all pappen du trenger!
-    </p>
-    <p>
-      Uansett bakgrunn er Byggruppa et godt innslag i en aktiv studenthverdag.
-      Praktisk og kreativt sløydarbeid er noe man fort innser at er en glemt
-      glede fra grunnskolen, og avspenningsverdien av slike aktiviteter kan ikke
-      undervurderes. Dessuten er det få andre studentaktiviteter kan skilte med
-      at budsjettet er fullstendig avhengig av jevnlig tyveri fra et
-      internasjonalt storselskap. Krav til ferdigheter og tidligere erfaringer
-      er ikke-eksisterende og byggruppa ønsker alle velkommen. <br><br>
-      Det bygges!
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
