--- a/P3/Undergrupper/Dans.html
+++ b/P3/Undergrupper/Dans.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Dansegruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Dansegruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Dansegruppen</h1>
+          <p>
+            I dansegruppa har vi det gøy og danser. Alle er velkomne uansett nivå, og
+            vi prøver oss på ulike stilarter etter hva medlemmene ønsker. De som vil
+            er med å koregrafere og lære bort danser. På øvinger danser vi for moro
+            skyld og for å lære oss danser til revyen - hvor vi såklart danser :D
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      I dansegruppa har vi det gøy og danser. Alle er velkomne uansett nivå, og
-      vi prøver oss på ulike stilarter etter hva medlemmene ønsker. De som vil
-      er med å koregrafere og lære bort danser. På øvinger danser vi for moro
-      skyld og for å lære oss danser til revyen - hvor vi såklart danser :D
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
