--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -35,5 +35,6 @@
     </div>
 
         <script src="Website_shell.js" type="text/javascript"></script>
+        <script src="Banner.js" type="text/javascript"></script>
   </body>
 </html>
