Fikset på oversikt undergrupper og tilsvarende style

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -9,48 +9,40 @@
 
     <div class="center_element">
       <div class="oversikt_undergrupper_boks">
-        
+
         <h1>Oversikt over undergrupper</h1>
 
         <a href="Undergrupper/Styret.html">
-        <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"></a>
-        <a href="Undergrupper/Styret.html">Revystyret</a>
+        <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"><p>Revystyret</p></a>
+
+        <h1>Oversikt over undergrupper</h1>
 
         <a href="Undergrupper/Bygg.html"><img src="Bilder/PR_logo.png"
-           style="width:80px; height:50px" title="Bygg logo" alt="Bygg logoen"></a>
-        <a href="Undergrupper/Bygg.html">Bygg</a>
+          title="Bygg logo" alt="Bygg logoen"><p>Bygg</p></a>
 
-        <a href="Undergrupper/Dans.html"><img src="Bilder/Undergruppebilder/Dans_logo.png"
-           style="width:80px; height:50px" title="Dans logo" alt="Dans logoen"></a>
-        <a href="Dans.html">Dans</a>
+        <a href="Undergrupper/Dans.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+          title="Dans logo" alt="Dans logoen"><p>Dans</p></a>
 
-        <a href="Undergrupper/Kostyme_og_rekvisitter.html"><img src="Bilder/Undergruppebilder/Kostyme_og_rekvisitter_logo.png"
-           style="width:80px; height:50px" title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"></a>
-        <a href="Undergrupper/Kostyme_og_rekvisitter.html">Kostyme- og rekvisitt</a>
+        <a href="Undergrupper/Kostyme_og_rekvisitter.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><p>Kostyme og rekvisitter</p></a>
 
-        <a href="Undergrupper/Musikk_og_band.html"><img src="Bilder/Undergruppebilder/Musikk_og_band_logo.png"
-           style="width:80px; height:50px" title="Musikk og band logo" alt="Musikk og band logoen"></a>
-        <a href="Undergrupper/Musikk_og_band.html">Musikk- og band</a>
+        <a href="Undergrupper/Musikk_og_band.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="Musikk og band logo" alt="Musikk og band logoen"><p>Musikk og band</p></a>
 
-        <a href="Undergrupper/PR_og_design.html"><img src="Bilder/Undergruppebilder/PR_logo.png"
-           style="width:80px; height:50px" title="PR logo" alt="PR logoen"></a>
-        <a href="Undergrupper/PR_og_design.html">PR- og design</a>
+        <a href="Undergrupper/PR_og_design.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="PR logo" alt="PR logoen"><p>PR og design</p></a>
 
-        <a href="Undergrupper/Skribent.html"><img src="Bilder/Undergruppebilder/Skriblent_logo.png"
-           style="width:80px; height:50px" title="Skriblent logo" alt="Skriblent logoen"></a>
-        <a href="Undergrupper/Skribent.html">Skriblentene</a>
+        <a href="Undergrupper/Skribent.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="Skriblent logo" alt="Skriblent logoen"><p>Skriblent</p></a>
 
-        <a href="Undergrupper/Teknikk.html"><img src="Bilder/Undergruppebilder/Teknikk_logo.png"
-           style="width:80px; height:50px" title="Teknikk logo" alt="Teknikk logoen"></a>
-        <a href="Undergrupper/Teknikk.html">Teknikere</a>
+        <a href="Undergrupper/Teknikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="Teknikk logo" alt="Teknikk logoen"><p>Teknikk</p></a>
 
-        <a href="Undergrupper/Velferd.html"><img src="Bilder/Undergruppebilder/Velferd_logo.png"
-           style="width:80px; height:50px" title="Velferd logo" alt="Velferd logoen"></a>
-        <a href="Undergrupper/Velferd.html">Velferdsansvarlige</a>
+        <a href="Undergrupper/Velferd.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="Velferd logo" alt="Velferd logoen"><p>Velferd</p></a>
 
-        <a href="Undergrupper/Økonomi.html"><img src="Bilder/Undergruppebilder/Økonomi_logo.png"
-           style="width:80px; height:50px" title="Økonomi logo" alt="Økonomi logoen"></a>
-        <a href="Undergrupper/Økonomi.html">Økonomi</a>
+        <a href="Undergrupper/Økonomi.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+           title="Økonomi logo" alt="Økonomi logoen"><p>Økonomi</p></a>
       </div>
     </div>
 
