--- a/P3/Undergrupper/Kostyme_og_rekvisitter.html
+++ b/P3/Undergrupper/Kostyme_og_rekvisitter.html
@@ -3,38 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Kostyme og Rekvisitter - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Kostyme- og Rekvisittgruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Kostyme- og Rekvisittgruppen</h1>
+          <p>
+            Takket være kostyme- og rekvisittgruppen slipper skuespillerne å stå nakne
+            på scenen og bruke imaginære dibbedutter til å spille ut scene etter scene
+            i revyen!<br><br>
+            Kostyme- og rekvisittgruppen har ansvar for alt av kostymer, sminke og
+            rekvisitter. Siden mange av kostymene er slikt som noen i revyen allerede
+            har, sminke bare trengs på forestilling og rekvisittene bare inkluderer
+            ting som er mindre enn en litt stor hund, er kostyme og rekvisitt en
+            ordentlig kosegruppe.
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      Takket være kostyme- og rekvisittgruppen slipper skuespillerne å stå nakne
-      på scenen og bruke imaginære dibbedutter til å spille ut scene etter scene
-      i revyen!<br><br>
-      Kostyme- og rekvisittgruppen har ansvar for alt av kostymer, sminke og
-      rekvisitter. Siden mange av kostymene er slikt som noen i revyen allerede
-      har, sminke bare trengs på forestilling og rekvisittene bare inkluderer
-      ting som er mindre enn en litt stor hund, er kostyme og rekvisitt en
-      ordentlig kosegruppe.
-    </p>
-    <div class="margin_heading">
-      <h2>Arbeidsoppgaver:</h2>
-    </div>
-    <p>
-      Vi bruker øvingshelgene effektivt til å fikse det som trengs av kostymer,
-      enten det er ved å raide Fretex/Finn eller sette klampen i bånn på en
-      symaskin. Samtidig putler vi avgårde med rekvisitter, der det brukes mye
-      maling, papp, limpistol og saks. For å komme i et godt humør lar vi
-      radioen surre og gå i bakgrunnen. <br>
-      En gang brukte vi en hel øvingshelgdag på å bygge et litt skeivt
-      ispinnehus. Kostyme og rekvisittgruppen er for alle som vil!
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
