--- a/P3/Undergrupper/Musikk.html
+++ b/P3/Undergrupper/Musikk.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Musikkgruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Musikkgruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Musikkgruppen</h1>
+          <p>
+            Gruppa du hører i sketsjer og mellom sketsjer, litt overalt, det er oss,
+            musikkgruppa! Er du glad i å synge eller spille et instrument er det plass
+            for deg, for vi er delt i to grupper, band og kor, som jobber sammen for å
+            få til mange kule låter med mange forskjellige instrumenter og stemmer! Vi
+            har det gøy og du kan bli med uansett nivået ditt, for sammen skaper vi
+            rytme og fine melodier!
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      Gruppa du hører i sketsjer og mellom sketsjer, litt overalt, det er oss,
-      musikkgruppa! Er du glad i å synge eller spille et instrument er det plass
-      for deg, for vi er delt i to grupper, band og kor, som jobber sammen for å
-      få til mange kule låter med mange forskjellige instrumenter og stemmer! Vi
-      har det gøy og du kan bli med uansett nivået ditt, for sammen skaper vi
-      rytme og fine melodier!
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
