--- a/P3/Undergrupper/PR_og_design.html
+++ b/P3/Undergrupper/PR_og_design.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>PR og Design - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>PR- og Designgruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>PR- og Designgruppen</h1>
+          <p>
+            Vil du være med på å spre det glade budskap om at Naborevyen faktisk
+            finnes? I PR- og designgruppa har vi ansvar for revyens nettside, logo,
+            promofilm og sosiale media. I tillegg til dette tar vi masse bilder
+            gjennom revyåret, står på stand i revyuka, og sørger for at selve revyen
+            blir filmet! Her kreves det ingen forkunnskaper, og alle er velkommen.
+            Så har du lyst har du lov!
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      Vil du være med på å spre det glade budskap om at Naborevyen faktisk
-      finnes? I PR- og designgruppa har vi ansvar for revyens nettside, logo,
-      promofilm og sosiale media. I tillegg til dette tar vi masse bilder
-      gjennom revyåret, står på stand i revyuka, og sørger for at selve revyen
-      blir filmet! Her kreves det ingen forkunnskaper, og alle er velkommen.
-      Så har du lyst har du lov!
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
