--- a/P3/Undergrupper/Skribent.html
+++ b/P3/Undergrupper/Skribent.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Skribentgruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Skribentgruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Skribentgruppen</h1>
+          <p>
+            Skrivegruppa er, ikke overraskende, hvor revyen blir skrevet. Her samles
+            vi for å skrive sketsjer og parodier (inkludert sangtekster), samt å
+            bestemme revyens overhengende tema. Dette er også Naborevyens eneste
+            gruppe som har ubegrenset tilgang til manuset før slippfesten. Som alt
+            annet i Naborevyen er skrivegruppa lavterskel, og du trenger ingen
+            tidligere erfaring for å bli med å skrive!
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      Skrivegruppa er, ikke overraskende, hvor revyen blir skrevet. Her samles
-      vi for å skrive sketsjer og parodier (inkludert sangtekster), samt å
-      bestemme revyens overhengende tema. Dette er også Naborevyens eneste
-      gruppe som har ubegrenset tilgang til manuset før slippfesten. Som alt
-      annet i Naborevyen er skrivegruppa lavterskel, og du trenger ingen
-      tidligere erfaring for å bli med å skrive!
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
