--- a/P3/Undergrupper/Teknikk.html
+++ b/P3/Undergrupper/Teknikk.html
@@ -3,31 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Teknikkgruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Teknikkgruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Teknikkgruppen</h1>
+          <p>
+            En god revy er litt som en UFO; det er litt kjedelig å høre om hvordan
+            UFOen så ut av vennene dine, men det er noe helt annet å se den selv! Det
+            er nettopp der teknisk gruppe kommer inn i bildet. Vi sørger for at revyen
+            ikke bare sees, men også høres! <br><br>
+            Teknisk gruppe har hovedsakelig ansvaret for lyd og lys under revyen,
+            og det er faktisk en av de viktigste jobbene med hele revyen, for en revy
+            man hverken ser eller hører, ei en god revy utgjører, som en luring en
+            gang sa.<br><br>
+            I tillegg til selve lyden og lyset, gjør teknisk gruppe også noen andre
+            ting. Vi styrer spotlights, vi koordinerer myggene (og andre mikrofoner),
+            vi samarbeider med PR for å filme revyen, og vi sørger for at scenebildet
+            som en helhet er så bra det kan få bli, slik at skuespillere og musikere
+            kan få vist seg frem på best måte.
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      En god revy er litt som en UFO; det er litt kjedelig å høre om hvordan
-      UFOen så ut av vennene dine, men det er noe helt annet å se den selv! Det
-      er nettopp der teknisk gruppe kommer inn i bildet. Vi sørger for at revyen
-      ikke bare sees, men også høres! <br><br>
-      Teknisk gruppe har hovedsakelig ansvaret for lyd og lys under revyen,
-      og det er faktisk en av de viktigste jobbene med hele revyen, for en revy
-      man hverken ser eller hører, ei en god revy utgjører, som en luring en
-      gang sa.<br><br>
-      I tillegg til selve lyden og lyset, gjør teknisk gruppe også noen andre
-      ting. Vi styrer spotlights, vi koordinerer myggene (og andre mikrofoner),
-      vi samarbeider med PR for å filme revyen, og vi sørger for at scenebildet
-      som en helhet er så bra det kan få bli, slik at skuespillere og musikere
-      kan få vist seg frem på best måte.
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
