--- a/P3/Undergrupper/Økonomi.html
+++ b/P3/Undergrupper/Økonomi.html
@@ -3,28 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Økonomigruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Økonomigruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Økonomigruppen</h1>
+          <p>
+            I dagens kapitalistiske samfunn hadde en revy som vår aldri klart seg uten
+            to ting: gratis arbeidskraft og penger. Det er her økonomigruppa kommer
+            inn. Vi, som alle de andre undergruppene kan bidra med gratis arbeidskraft
+            også kjent som slavearbeid, men som ingen av de andre undergruppene kan vi
+            bidra med penger. Vår jobb er å planlegge alt av inntekter og utgifter for
+            det neste året, også kjent som budsjettering, samt søke rundt til ulike
+            potensielle sponsorer som kan gi oss penger til ulike formål. Eksempelvis
+            lokaler, teatersminke, teknisk utstyr, kostymer og kanskje viktigst av
+            alt: pizza til øvingshelger.<br>
+            Liker du penger? Søk økonomigruppa!
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
     </div>
-    <p>
-      I dagens kapitalistiske samfunn hadde en revy som vår aldri klart seg uten
-      to ting: gratis arbeidskraft og penger. Det er her økonomigruppa kommer
-      inn. Vi, som alle de andre undergruppene kan bidra med gratis arbeidskraft
-      også kjent som slavearbeid, men som ingen av de andre undergruppene kan vi
-      bidra med penger. Vår jobb er å planlegge alt av inntekter og utgifter for
-      det neste året, også kjent som budsjettering, samt søke rundt til ulike
-      potensielle sponsorer som kan gi oss penger til ulike formål. Eksempelvis
-      lokaler, teatersminke, teknisk utstyr, kostymer og kanskje viktigst av
-      alt: pizza til øvingshelger.<br>
-      Liker du penger? Søk økonomigruppa!
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
