--- a/P3/Undergrupper/Velferd.html
+++ b/P3/Undergrupper/Velferd.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Velferdgruppen - Naborevyen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <img src="placeholder.png" class="banner" alt="Banner">
-    <h1>Velferdgruppen</h1>
-    <div class="margin_heading">
-      <h2>Om oss:</h2>
-    </div>
-    <p>
+    <div class="center_element">
+      <img src="../Bilder/Bannere/IMG_2232.jpg" class="banner" alt="Banner">
+      <div class="gruppeboks">
+        <div class="gruppetekst">
+          <h1>Velferdgruppen</h1>
+          <p>
 
-    </p>
-    <img src="placeholder.png" class="leader_image" alt="Leder">
-    <h2>Navn Navnesen, Leder</h2>
-    <p>Tekst om lederen</p>
+          </p>
+        </div>
+        <div class="gruppeleder">
+          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <h2>Navn Navnesen, Leder</h2>
+          <p>Tekst om lederen</p>
+        </div>
+      </div>
+    </div>
+    <script src="../Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
