--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div class="center_element" id="arkiv_body">
-
-      <div class="Arkiv_Bilder" id="Revy???">
+    <!--
+      <div class="Arkiv_Bilder" id="revy_id">
         <h2 class="arkiv_title" >Revy ??? </h2>
         <button class="knapp_l" onclick="iterate_l()"> Left </button>
 
@@ -57,6 +57,7 @@
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1899.JPG" alt="Arkiv" id="14">
         <img  src= "./Bilder/Arkiv_Bilder/IMG_1918.JPG" alt="Arkiv" id="15">
       </div>
+    -->
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
     <script src="Arkiv.js" type="text/javascript"> </script>
