--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -9,7 +9,10 @@
 
 
     <div class="center_element">
-      <img class="banner" src="Bilder/Bannere/IMG_2232.JPG" alt="banner">
+      <div class="banner_element">
+              <img class="banner" src="Bilder/Bannere/IMG_2232.JPG" alt="banner">
+      </div>
+
 
       <div id="hovedside_boks">
 
