--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -8,8 +8,13 @@
   <body class="entire_page">
     <div class="center_element">
 
+      <!--Kode for banner slideshow er inspirert av https://www.w3schools.com/howto/howto_js_slideshow.asp-->
       <div class="banner_element">
-        <img class="banner slides fade" src="Bilder/Bannere/IMG_2232.JPG" alt="banner">
+        <img class="slides fade" src="Bilder/Bannere/Banner_1.jpg" alt="Banner">
+        <img class="slides fade" src="Bilder/Bannere/Banner_2.jpg" alt="Banner">
+        <img class="slides fade" src="Bilder/Bannere/Banner_3.jpg" alt="Banner">
+        <img class="slides fade" src="Bilder/Bannere/Banner_4.jpg" alt="Banner">
+        <img class="slides fade" src="Bilder/Bannere/Banner_5.jpg" alt="Banner">
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -44,6 +49,6 @@
       </div>
     </div>
   <script src="Website_shell.js" type="text/javascript"></script>
-  <script src="Banner.js" type="text/javascript"></script>
+  <script src="Sliding_Banner.js" type="text/javascript"></script>
   </body>
 </html>
